# demo-ai-django-pyhack

./: LICENSE  README.md  hello.py  pyproject.toml  pytest.ini
.github/workflows/: python-tests.yml
config/: settings.py  urls.py
events/: forms.py  models.py  urls.py  views.py
events/migrations/: 0001_initial.py
events/templates/events/: base.html  event_detail.html  event_form.html  event_list.html  user_register.html
events/templates/registration/: login.html
hello/: urls.py
src/config/: settings.py  urls.py
src/helloapp/: forms.py  models.py  tests.py  views.py
src/helloapp/migrations/: 0001_initial.py
src/helloapp/templates/helloapp/: application_form.html  event_detail.html  event_list.html
